# service-controller-notebookum

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py
app/controllers/: orchestration.py
